demo: strict mode

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             import Hello from "./Hello";
 
             ReactDOM.render(
-                &lt;Hello name="oxiane"/&gt;,
+                &lt;Hello name="world"/&gt;,
                 document.getElementById('root')
             );
             </code></pre>
