new Context API is not "experimental" anymore !

--- a/index.html
+++ b/index.html
@@ -1512,17 +1512,13 @@
             <h3>Context</h3>
         </section>
         <section>
-            <h3>Mises en garde</h3>
+            <h3>new Context API !</h3>
             <ul>
                 <li>On peut passer des objets à ses composants enfants (n'importe où dans la hiérarchie).</li>
-                <li class="fragment">Des librairies sont basées la dessus, mais ce n'est pas officiellement supporté (le
-                    fonctionnement pourra varier, être supprimé).
+                <li class="fragment">Beaucoup de librairies sont basées la dessus. Ce n'était pas une API officiellement supportée
+                    avant react 16.3.0.
                 </li>
-                <li class="fragment">La doc parle d'<b>experimental API</b> !</li>
                 <li class="fragment"><i>react-redux</i> fonctionne grâce à ça (le store est passé à tous les enfants).
-                </li>
-                <li class="fragment">
-                    <mark>A n'utiliser qu'en cas d'urgence !</mark>
                 </li>
             </ul>
         </section>
