--- a/TPs/index.html
+++ b/TPs/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Formation React !</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.3.0-alpha.2/umd/react.development.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.3.0-alpha.2/umd/react-dom.development.js"></script>
 </head>
 <body>
 <div id="root"></div>
