--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <section>
             <h3>Versions</h3>
             <pre><code data-trim>
-                    "react": "16.3.0-alpha.3"
+                    "react": "16.3.1"
                 </code></pre>
         </section>
         <section>
