fix styled-components example

--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
                 text-align: center;
                 color: palevioletred;
             `;
-            <Title>Superbe titre !</Title>
+            &lt;Title&gt;Superbe titre !&lt;/Title&gt;
             </code></pre>
 
             <div style="font-size: 30px; text-align: left; margin-left: 50px;">
