--- a/index.html
+++ b/index.html
@@ -458,6 +458,10 @@
             </div>
         </section>
         <section>
+            <h3>Composant et Cycle de vie</h3>
+            <img data-src="images/lifecycle.jpg" alt="lifecycle" width="100%">
+        </section>
+        <section>
             <h3>Variable de classe</h3>
             <pre><code data-trim>
             class Count extends React.Component {
@@ -475,6 +479,7 @@
                 }
             }
             </code></pre>
+            <mark>Don't try this at home !</mark>
         </section>
         <section>
             <h3>State</h3>
