--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
 <div class="reveal">
     <div class="slides">
-       <!--<section>
+       <section>
             <h1><img width="75" height="75" data-src="images/react.svg" alt="react"
                      style="border: none; background: none; box-shadow: none; margin: 0;">React</h1>
             <h3>#ES6</h3>
@@ -800,7 +800,7 @@
             <pre><code data-trim>
                 <span> Jet d{String.fromCharCode(39)}eau</span>
             </code></pre>
-        </section>-->
+        </section>
         <section>
             <h3>JSX if (else)</h3>
             <p>if</p>
