--- a/index.html
+++ b/index.html
@@ -272,6 +272,31 @@
             </code></pre>
         </section>
         <section>
+            <h3>Destructuring - alias</h3>
+            <pre><code data-trim>
+            const user = {
+                firstname: 'john',
+                lastname: 'doe',
+                address: {
+                    street: 'avenue des champs élysées',
+                    num: '12'
+                }
+            };
+
+            let getUserAddress = ({address: {num: foo, street: bar}}) =>
+                foo.concat(' ').concat(bar);
+            </code></pre>
+        </section>
+        <section>
+            <h3>Destructuring - arrays</h3>
+            <pre><code data-trim>
+            const maths = [x => x + 1, x => x * x, x => x * x * x];
+            const [plus1, square] = maths;
+            plus1(41); // 42
+            square(12); // 144
+            </code></pre>
+        </section>
+        <section>
             <h3>Shorthand Notation</h3>
             <pre><code data-trim>
                 const foo = 42;
@@ -308,6 +333,26 @@
                 } catch(error){
                     console.log(error.toString())
                 }
+            }
+            </code></pre>
+        </section>
+        <section>
+            <h3>Promesses VS. async - await</h3>
+            <pre><code data-trim>
+            axios.get('/users/42/items')
+                .then(({data : items})) => items.map(item => item.id))
+                .then(ids => {/* use the ids */})
+                .catch(error => console.log(error.toString()))
+            </code></pre>
+            <pre><code data-trim>
+            async function fetchItems {
+              try {
+                const {data: items} = await axios.get('/users/42/items');
+                const itemIds = items.map(item => item.id));
+                /* use the ids */
+              } catch(error){
+                console.log(error.toString())
+              }
             }
             </code></pre>
         </section>
