add bonus to optimization TP

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <section>
             <h3>Versions</h3>
             <pre><code data-trim>
-                    "react": "16.6.0"
+                    "react": "16.7.0-alpha.0"
                 </code></pre>
         </section>
         <section>
@@ -1710,6 +1710,7 @@
             <ol>
                 <li>Implémenter la méthode shouldComponentUpdate</li>
                 <li>Installer le plugin React, pour voir si le composant est redessiné</li>
+                <li>Bonus: Reprendre le TP-03 pour limiter les renders inutiles</li>
             </ol>
             <aside class="notes">
                 Démo optimisations
