remove "install" instructions from TPs add snapshot to TP07

--- a/index.html
+++ b/index.html
@@ -927,7 +927,6 @@
             <h3>TP-03</h3>
             <h4>Liste des étudiants</h4>
             <ol>
-                <li>Installer material-ui</li>
                 <li>Afficher un champ texte "input" qui permet de filtrer les éléments d'un tableau</li>
                 <li>Afficher le nom de l'étudiant sur lequel on a cliqué, ou un message si aucun n'est sélectionné</li>
                 <li>Bonus : Faire une pull request d'une appli jolie ET simple ;)</li>
@@ -1270,7 +1269,7 @@
             <h3>TP-04</h3>
             <h4>Liste de courses - bis</h4>
             <ol style="font-size: 34px">
-                <li>Installer le plugin redux, les packages redux et react-redux</li>
+                <li>Installer le plugin redux</li>
                 <li>Comme le TP-02 mais en utilisant le <i>state</i> du store plutôt que le <i>state</i> du composant,
                     et en initialisant la liste sans chargement asynchrone (liste en dur).
                 </li>
@@ -1360,7 +1359,6 @@
             <h3>TP-05</h3>
             <h4>Liste de courses - ter</h4>
             <ol>
-                <li>Installer redux-thunk</li>
                 <li>Configurer le Middleware "thunk" dans le index.js</li>
                 <li>Comme le TP-04 mais en faisant un appel asynchrone (http) pour charger la liste d'items</li>
                 <li>Bonus: Faire une action qui avant d'ajouter l'item au store, applique la TVA sur le prix lors d'un
@@ -1563,7 +1561,6 @@
             <p>Le but est de tester complètement le TP-03
             <p>
             <ol style="font-size: 32px">
-                <li>Installer enzyme et enzyme-adapter-react-16 (--save-dev)</li>
                 <li>Créer un fichier .test.js par composant</li>
                 <li><i>StudentDetails</i>: Vérifier le texte pour les 2 cas (Student.NULL ou non)</li>
                 <li><i>Filter</i>: Vérifier que le callback est appelé lors d'un événement <i>change</i></li>
@@ -1578,6 +1575,7 @@
                     les bons éléments pour
                     un filtre donné.
                 </li>
+                <li>Bonus: Essayer les <i>snapshots</i> jest</li>
             </ol>
         </section>
         <section>
