--- a/index.html
+++ b/index.html
@@ -996,6 +996,14 @@
         </section>
         <section>
             <h3>Redux</h3>
+            <pre><code data-trim>
+                const userId = window.current_account.id
+            </code></pre>
+            <p>&laquo;Pourquoi utiliser redux alors qu'on a les variables globales ?&raquo;</p>
+            <p class="fragment">#TROLL</p>
+        </section>
+        <section>
+            <h3>Redux</h3>
 
             <div style="font-size: 30px; text-align: left; margin-left: 15px;">
                 <ul>
