fix missing slashes

--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                     return &lt;div&gt;
                         &lt;div&gt;{this.props.title}&lt;/div&gt;
                         &lt;button&gt;{this.props.label}&lt;/button&gt;
-                    &lt;div&gt;
+                    &lt;/div&gt;
                 }
             }
             </code></pre>
@@ -619,7 +619,7 @@
                 &lt;div&gt;
                     &lt;div&gt;{props.title}&lt;/div&gt;
                     &lt;button&gt;{props.label}&lt;/button&gt;
-                &lt;div&gt;;
+                &lt;/div&gt;;
             </code></pre>
             <pre class="fragment current-visible"><code data-trim>
             const ButtonApp = ({title, label}) =>
