--- a/TPs/demos/futur/index.html
+++ b/TPs/demos/futur/index.html
@@ -69,6 +69,14 @@
         <section><img data-src="https://cdn-images-1.medium.com/max/1000/1*SU5_ws88Kh_Oio_L4Myhvg.png" alt="my name is">
         </section>
         <section>
+            <h3>React Hooks</h3>
+            <ul>
+                <li>Ajouter des comportements...</li>
+                <li>... Sans les problèmes des HOC</li>
+                <li>Sans l'overhead de la classe JS</li>
+            </ul>
+        </section>
+        <section>
             <h3>useState - Demo !</h3>
             <pre><code data-trim>
             import ReactDOM from 'react-dom'
@@ -107,7 +115,7 @@
             </code></pre>
         </section>
         <section>
-            <h3>custom Hooks !</h3>
+            <h3>custom Hooks</h3>
             <ul>
                 <li>use existing hooks !</li>
                 <li>use existing hooks !</li>
